<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/milkbackimage"
    tools:context=".myregisterpage">

    <TextView
        android:layout_width="341dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/registerbtn"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"></TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="325dp"
        android:layout_height="600dp"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/FULLNAME"
                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/Entername"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/email"
                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/useremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/Enteremail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:textColor="#153462"
                android:text="@string/PHONE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phonenum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:hint="@string/Enterphnno"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:textColor="#153462"
                android:text="@string/Address"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/youraddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:hint="@string/Enteraddr"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:textColor="#153462"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:hint="@string/entpass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="40sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/CONFIRMPASSWORD"
                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/conpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:hint="@string/Enterconfirmpass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="40sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/skin_button"
                android:shadowColor="@color/cardview_dark_background"
                android:text="@string/rgstr"
                android:textStyle="bold"
                android:textSize="20sp"/>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alreadyanacc"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/loginnowbutton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:text="@string/loginbut"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


    </LinearLayout>
</LinearLayout>


