<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/milkbackimage"
    tools:context=".myregisterpage">

    <TextView
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/REGISTRATION"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"></TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="325dp"
        android:layout_height="500dp"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/FULLNAME"
                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farmer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/Entername"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/Address"
                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farmer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/Enteraddr"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/pincode"
                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farmer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enterpincode"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/PHONE"

                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farmer_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/Enterphnno"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"/>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="278dp"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/milkcost"
                android:textColor="#153462"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/farmer_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:hint="@string/entercost"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"

                />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/farmer_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/skin_button"
                android:shadowColor="@color/cardview_dark_background"
                android:text="@string/rgstr"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>


