<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer_history">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:id="@+id/date"
                    android:layout_width="2dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/borderline"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/Date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/milk_given"
                    android:text="@string/milkg"
                    android:textColor="@color/black"
                    android:background="@drawable/borderline"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_weight="0.5"/>
                <TextView
                    android:id="@+id/quan"
                    android:text="@string/milks"
                    android:textColor="@color/black"
                    android:background="@drawable/borderline"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/costof"
                    android:text="@string/cos"
                    android:textColor="@color/black"
                    android:background="@drawable/borderline"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_weight="0.5"/>
                <TextView
                    android:id="@+id/total_cost"
                    android:text="@string/toatl"
                    android:textColor="@color/black"
                    android:background="@drawable/borderline"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_weight="0.5"/>


            </TableRow>
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview"
            android:layout_width="match_parent"
            android:layout_height="695dp" />


    </LinearLayout>
</RelativeLayout>