<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:background="@drawable/milkbackimage"
    tools:context=".myloginpage">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/milkbackimage">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/LOGIN"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:id="@+id/cardview_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="24dp" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/usertext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/usersemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bcg"
                    android:drawableLeft="@drawable/email_24"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/Enteremail"
                    android:inputType="textPersonName"
                    android:padding="13dp" />

                <TextView
                    android:id="@+id/userpas"
                    android:layout_width="292dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/password"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bcg"
                    android:drawableLeft="@drawable/lock_24"
                    android:drawablePadding="15dp"
                    android:hint="@string/Enterpass"
                    android:inputType="textPassword"
                    android:padding="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/frgtpassword"
                    android:textAlignment="center"
                    android:textColor="#FF00"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/loginbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#007D96"
                    android:text="@string/LOGINbtn"
                    android:textColor="@color/white"
                    android:textSize="23dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/noacc"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/registernowbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/registerbtn"
                        android:textAllCaps="false"
                        android:textColor="#B22222"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:elevation="0dp"
            app:cardCornerRadius="45dp"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/icon"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</RelativeLayout>