<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/milkbackimage"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txt"
        android:layout_width="252dp"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/Selectlang"
        android:textColor="@color/purple_700"
        android:textSize="25dp" />

    <Button
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onClick"
        android:text="@string/English"
        android:textColor="@color/material_dynamic_neutral100"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="212dp" />

    <Button
        android:id="@+id/telugu"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="289dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onClick"
        android:text="@string/Telugu"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="412dp" />
</RelativeLayout>